[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/img_dirt_tile_64x.png" type="Texture" id=1]
[ext_resource path="res://Scenes/StoreLayout.gd" type="Script" id=2]
[ext_resource path="res://Sprites/img_furnace.png" type="Texture" id=3]
[ext_resource path="res://Sprites/img_stone_tile_64x.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Scenes/FactoryLayout.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Globals.gd" type="Script" id=11]

[node name="Game" type="Node2D"]

[node name="Globals" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="FactoryLayout" type="Node2D" parent="Globals"]
script = ExtResource( 8 )

[node name="Backgroud" type="Node2D" parent="Globals/FactoryLayout"]

[node name="TextureRect" type="TextureRect" parent="Globals/FactoryLayout/Backgroud"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="Globals/FactoryLayout"]

[node name="btnStoreLayout" type="TouchScreenButton" parent="Globals/FactoryLayout/Buttons"]
position = Vector2( 271.836, 1649.89 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 7 )

[node name="toStoreLayout" type="Tween" parent="Globals/FactoryLayout"]

[node name="StoreLayout" type="Node2D" parent="Globals"]
position = Vector2( -1080, 0 )
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="Globals/StoreLayout"]

[node name="TextureRect" type="TextureRect" parent="Globals/StoreLayout/Background"]
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toFactoryLayout" type="Tween" parent="Globals/StoreLayout"]

[node name="Buttons" type="Node2D" parent="Globals/StoreLayout"]

[node name="btnFactoryLayout" type="TouchScreenButton" parent="Globals/StoreLayout/Buttons"]
position = Vector2( 755.099, 1664.99 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 3 )
[connection signal="released" from="Globals/FactoryLayout/Buttons/btnStoreLayout" to="Globals" method="_on_btnStoreLayout_released"]
[connection signal="released" from="Globals/StoreLayout/Buttons/btnFactoryLayout" to="Globals" method="_on_btnFactoryLayout_released"]
